	* pgp/seahorse-pgp-key.c:
	* pgp/seahorse-pgp-key.h:
	* pgp/seahorse-pgp-signature.c:
	* pgp/seahorse-server-source.c: Add function for calculating 
	displayable identifier. Rename other PGP key ID related functions
	to have 'calc' in the name instead of 'get. 
	
	* ssh/seahorse-ssh-key.c: 
	* ssh/seahorse-ssh-key.h:
	* ssh/seahorse-ssh-source.c: Explicitly set SSH key displayable ID.
	
2008-12-16  Stef Walter  <stef@memberwebs.com>

	* src/Makefile.am:
	* src/main.c: (moved to seahorse-main.c) Rename main.c
	to stop confusing debuggers. 
	
2008-12-16  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-key-manager-store.c: Fix cyclical reference,
	with the filter and sort models.
	
	* libseahorse/seahorse-context.c: Don't automatically try 
	and refresh remote key sources.
	
	* libseahorse/seahorse-object.c: Don't try to realize properties
	for which we already have a value.

2008-12-16  Stef Walter  <stef@memberwebs.com>
	
	* pgp/seahorse-gpgme-key.c:
	* pgp/seahorse-hkp-source.c:
	* pgp/seahorse-ldap-source.c:
	* pgp/seahorse-pgp-key.c:
	* src/seahorse-keyserver-results.c: Fix bugs relating to searching
	for remote keys, that resulted from recent refactoring.

2008-12-15  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-progress.c: Disconnect properly from 
	monitoring progress on operations when op finishes.
	
	* pkcs11/seahorse-pkcs11-object.c: Access object slot correctly.
	
2008-12-15  Stef Walter  <stef@memberwebs.com>

	* gkr/Makefile.am:
	* gkr/seahorse-add-keyring.glade: (moved from libseahorse)
	* gkr/seahorse-gkr-add-keyring.c: (added)
	* gkr/seahorse-gkr-commands.c: (removed)
	* gkr/seahorse-gkr-commands.c: (removed)
	* gkr/seahorse-gkr-dialogs.h:
	* gkr/seahorse-gkr-item-commands.c: (added)
	* gkr/seahorse-gkr-item-commands.h: (added)
	* gkr/seahorse-gkr-keyring-commands.c: (added)
	* gkr/seahorse-gkr-keyring-commands.h: (added)
	* gkr/seahorse-gkr-module.c: 
	* gkr/seahorse-gkr-module.h:
	* libseahorse/Makefile.am: