@@ -23,6 +23,8 @@
 	* ssh/seahorse-ssh-key.h:
 	* ssh/seahorse-ssh-source.c: Explicitly set SSH key displayable ID.
 	
+	* libseahorse/seahorse-widget.c: Don't save window sizes for dialogs.
+	
 2008-12-16  Stef Walter  <stef@memberwebs.com>
 
 	* src/Makefile.am:
